Add to cart function

--- a/sc_updated.html
+++ b/sc_updated.html
@@ -1,51 +1,72 @@
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="sc_updated.css">
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="sc_updated.css">
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script src="https://kit.fontawesome.com/98db0803c5.js" crossorigin="anonymous"></script>
-  </head>
+</head>
+<body>
   <div class="container">
-    <div class="total-price">Rs.0</div>
-  <div class="watches">
+    <div class="nav">
+      <h3>Watch Store</h1>
+      <div class="total-price">Rs.0</div>
+    </div>
+    
+    <div class="watches">
+
       <div class="watcht-1 watch" id="watch1">
-          <img src="https://i.ibb.co/qRmsKnX/7136w-Q4mnm-L-AC-UL480-QL65-removebg-preview.png" class="watch-img" width ="60px" height="100px"  id="one"></img>
-          <p class="watch-title">Titan Raga Women’s Bracelet Watch </p>
-          <p class="watch-price" price: <span>9,289</span></p>
-          <button class="add-cart" id="1">Add to Cart</button>
+        <img
+          src="https://images.unsplash.com/photo-1542496658-e33a6d0d50f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+          class="watch-img" width="220px" height="100px" id="one"></img>
+        <p class="watch-title">Titan Raga Women’s Bracelet Watch </p>
+        <p class="watch-price" >price: 9,289</p>
+        <div class="quantity-details">
+          <div class="total-price-quanity">Rs 9,289</div>
+        </div>
+        <button class="add-cart-btn" id="1">Add to Cart</button>
       </div>
+
       <div class="watch-2 watch" id="watch2">
-  
-          <img src="https://i.ibb.co/RhnBgmD/71-Leokke-Cy-L-AC-UL480-QL65-removebg-preview.png" id="watch-img-2" width ="60px" height="100px" class="watch-img" id="two"></img>
-          <p class="watch-title">Fossil Women's Jacqueline Quartz </p>
-          <p class="watch-price">price : 6,499</p>
-          <button class="add-cart" id="2" >Add to Cart</button>
-  
+        <img
+          src="https://images.unsplash.com/photo-1632280071595-b13521457242?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+          id="watch-img-2" width="220px" height="100px" class="watch-img" id="two"></img>
+        <p class="watch-title">Fossil Women's Jacqueline Quartz </p>
+        <p class="watch-price">price : 6,499</p>
+        <div class="quantity-details">
+          <div class="total-price-quanity">Rs 6,499</div>
+        </div>
+        <button class="add-cart-btn" id="2">Add to Cart</button>
       </div>
   
       <div class="watcht-3 watch" id="watch3">
-  
-          <img src="https://i.ibb.co/6Y7nzdv/815e-BDa-Qcl-L-AC-UL480-QL65-removebg-preview.png" id="watch-img-3" width ="60px" height="100px" class="watch-img" id="three"></img>
-          <p class="watch-title">Anne Klein Women's 104899SVTT</p>
-  
-          <p class="watch-price">price : 14,299</p>
-          <button class="add-cart"  id="3">Add to Cart</button>
-  
+        <img
+          src="https://images.unsplash.com/photo-1623998021450-85c29c644e0d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=957&q=80"
+          id="watch-img-3" width="220px" height="100px" class="watch-img" id="three"></img>
+        <p class="watch-title">Anne Klein Women's 104899SVTT</p>
+        <p class="watch-price">price : 14,299</p>
+        <div class="quantity-details">
+          <div class="total-price-quanity">Rs 14,299</div>
+        </div>
+        <button class="add-cart-btn" id="3">Add to Cart</button>
       </div>
   
       <div class="watcht-4 watch" id="watch4">
-  
-          <img src="https://i.ibb.co/tCKYJSb/717-BSLVx-ABL-AC-UL480-QL65-removebg-preview.png"  id="watch-img-4" width ="60px" height="100px" class="watch-img" id="four"></img>
-          <p class="watch-title">Anne Klein Women's Genuine Diamond </p>
-  
-          <p class="watch-price">price : 4289</p>
-          <button class="add-cart"  id="4">Add to Cart</button>
-  
+        <img
+          src="https://images.unsplash.com/photo-1518131672697-613becd4fab5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTI2fHx3YXRjaHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60"
+          id="watch-img-4" width="220px" height="100px" class="watch-img" id="four"></img>
+        <p class="watch-title">Anne Klein Women's Genuine Diamond </p>
+        <p class="watch-price">price : 4,289</p>
+        <div class="quantity-details">
+          <div class="total-price-quanity">Rs 4,289</div>
+        </div>
+        <button class="add-cart-btn" id="4">Add to Cart</button>
       </div>
-      </div>
-     
-      <div class="cart-content"></div>
+
     </div>
-      <script src="sc_updated.js"></script>
+  
+    <div class="cart-content"></div>
+  </div>
+  <script src="sc_updated.js"></script>
+</body>
